@@ -1,3 +1,13 @@
+Sun Dec 28 07:18:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
+
+          . Bug fix where the node name contained illegal characters.
+
+        * install/CUTS_PICML.wxs:
+
+          . Fixed compiliation errors.
+
 Sat Dec 27 23:57:43 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Header_Traits.h:
